css/contact.css
/*Extra small devices (small phones, 350px and down)*/


.name
{
    font-weight: bold;
}

.element
{
    height: 60px;
    line-height: 60px;
    background: rgb(0, 82, 107);
    color: white;
    font-size: 17px;
    border-top : 1px white dashed;

}

body
{
    text-align: center;
    margin-top:50px;
}

#fb
{
    background: #3b5999;
    color: white;
    height: 120px;
    padding-top:10px;
    padding-bottom: 10px;
    margin-top: 15px;
}

#fb:hover
{
    cursor: pointer;
    background: #4b71c5;
}

#reginfo
{
    padding-left: 10px;
    padding-right: 10px;
    margin-bottom: 50px;
}

/* Small devices (phones, 350px and up) */
@media only screen and (min-width: 350px) {
	

} 

/* Small devices (large phones, 540px and up) */
@media only screen and (min-width: 540px) {
    body 
    {
        margin-top: 60px;
    }
	
} 
/* Small devices (portrait tablets, landscape phones, 640px and up) */
@media only screen and (min-width: 640px) {
    
    #fb
    {
        width: 50%;
        margin-left: auto;
        margin-right: auto;
    }
    .element
    {
        width: 50%;
        margin-left: auto;
        margin-right: auto;
    }
	
} 

/* Medium devices (landscape tablets, 800px and up) */
@media only screen and (min-width: 800px) {
	
} 

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
	
	
} 

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
	

}
/* Extra enormous devices (TV, 1700px and up) */
@media only screen and (min-width: 1700px) {
	
}

